--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@babel/cli": "^7.16.7",
     "@babel/core": "^7.16.7",
-    "@babel/preset-flow": "^7.16.7",
+    "@babel/plugin-transform-flow-strip-types": "^7.16.7",
     "flow-bin": "^0.168.0"
   }
 }
